   http://rt.cpan.org/Ticket/Display.html?id=29771

 - test 171 in t/t01introvert.t was failing on perls configured to
   use long double.
   http://rt.cpan.org/Ticket/Display.html?id=29413

 - the code for the transform2() uminus operator was missing a break.
   Added tests for better code coverage of the ops.
   http://rt.cpan.org/Ticket/Display.html?id=29296

Imager 0.60 - 30 August 2007
===========

 - Finished/rewrote Arnar's old SGI RGB file format support, so Imager
   now has full SGI RGB image format, including RLE and 16-bit/sample
   images.
   https://rt.cpan.org/Ticket/Display.html?id=8666

 - logging functions are now available in the API

 - applied Gabriel Vasseur's patch
   added documentation, further tests, and support for greyscale images
   Obviously problems are my fault :)
   https://rt.cpan.org/Ticket/Display.html?id=28142

 - the mask for ICO/CUR images is now applied as an alpha channel to
   the returned image.  For the old behaviour, supply ico_masked => 0
   to read() or read_multi().  This should be less confusing when
   using Imager as a general image processor.
   https://rt.cpan.org/Ticket/Display.html?id=29001

Bug fixes:

 - in some cases it's possible for giflib/libungif to return color 
   indexes outside the range of colors defined by the image's palette.
   We now expand the palette to match the indexes used.
   Thanks to Gabriel Vasseur for reporting this.

 - fixed various memory leaks that could occur when failing to read png,
   jpeg, bmp or tga files.

 - to avoid confusion, channels not present in the image are returned as
   zero by getscanline().  This has no effect on the C level i_glin()
   and i_glinf() API functions which continue to not set the unused
   channels.

 - the convert() method now returns an image of the same sample size as
   the source image.
   https://rt.cpan.org/Ticket/Display.html?id=28492

 - remove repeated text in Imager::Files
   http://rt.cpan.org/Ticket/Display.html?id=27589
